Closed Bug 1602113 Opened 4 years ago Closed 4 years ago

mailnews/extensions/smime/src/nsCertPicker.cpp:232:7: error: use of undeclared identifier 'do_CreateInstance'

Categories

(MailNews Core :: Backend, defect)

defect
Not set
blocker

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 73.0

People

(Reporter: aceman, Assigned: aceman)

Details

Attachments

(2 files)

The compilation fails in current trunk of Thunderbird with this error:
mailnews/extensions/smime/src/nsCertPicker.cpp:232:7: error: use of undeclared identifier 'do_CreateInstance'

Attached patch 1602113.patchSplinter Review

Looks like some includes have changed in m-c and now we are not inheriting the nsComponentManagerUtils.h as before in some c-c files.

Try run:
https://treeherder.mozilla.org/#/jobs?repo=try-comm-central&revision=e7f9cbc2f6d5781e5d7fff7743500bccc55f44a9

Attachment #9114275 - Flags: review?(rob)
Attachment #9114275 - Flags: review?(rob) → review+

Pushed by acelists@atlas.sk:
https://hg.mozilla.org/comm-central/rev/f44ace76831e
add some missing includes of nsComponentManagerUtils.h. r=rjl

Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 73.0

This was caused by bug 1600545. Sadly it left TB busted due to unified compilation issues in M-C code:

 0:17.29 In file included from Unified_cpp_parser_html0.cpp:2:
 0:17.29 In file included from c:/mozilla-source/comm-central/parser/html/nsHtml5AtomTable.cpp:5:
 0:17.29 In file included from c:/mozilla-source/comm-central/parser/html/nsHtml5AtomTable.h:8:
 0:17.29 In file included from c:/mozilla-source/comm-central/obj-x86_64-pc-mingw32/dist/include/nsHashKeys.h:12:
 0:17.29 In file included from c:/mozilla-source/comm-central/obj-x86_64-pc-mingw32/dist/include\nsAutoPtr.h:10:
 0:17.29 c:/mozilla-source/comm-central/obj-x86_64-pc-mingw32/dist/include\nsCOMPtr.h(414,5): error: no matching function for call to 'ToSupports'
 0:17.29     NSCAP_LOG_ASSIGNMENT(this, aNewPtr);
 0:17.29     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

So clearly bug 1519936 wasn't fixed :-(

SeaMonkey needs another fix.

Attachment #9114371 - Flags: review+

Oh I see Jorg already found it too. Can someone check it in.

Let's wait for the follow-up to bug 1600545 to be merged to mozilla-central. Then we're building again.

Pushed by frgrahl@gmx.net:
https://hg.mozilla.org/comm-central/rev/9d375b52da67
Add missing include of nsComponentManagerUtils.h to saxparser. r=frg
Pushed by mozilla@jorgk.com:
https://hg.mozilla.org/comm-central/rev/49bc32a100a3
Follow-up: Reformat. rs=reformat DONTBUILD
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: