Bug 1602113 - add some missing includes of nsComponentManagerUtils.h. r=rjl